2007-09-16  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Updated to version 1.0.0.

2007-09-15  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyatspi.zip: Updated to latest pyatspi revision.
	These are updates from bugs #472301 and #467366.

2007-09-04  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Changed to version 0.1.92.

2007-08-31  Eitan Isaacson  <eitan@ascender.com>

	* MAINTAINERS: Updated to new format.

2007-08-30  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: 
	* plugins/script_recorder.glade: Added translation comments 
	to some hard strings (bug 471756).

	* plugins/event_monitor.glade: 
	* plugins/interface_view.glade:
	* plugins/script_recorder.glade: Unmark stock ids for 
	translation, thanks Gabor Kelemen! (bug 470901).

2007-08-29  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Limit splits in accessible 
	attribute pairs, thanks Scott Haeger! (bug 464365).
	
2007-08-27  Eitan Isaacson  <eitan@ascender.com>

	* doc/accerciser.1: New manpage.
	* doc/Makefile.am: New Makefile.am.
	* configure.in: Added doc dir.
	* Makefile.am: Added doc dir.
	* NEWS: Updated news with manpage.
	
	* NEWS: Updated with news for version 0.1.91.
	* README: Updated to version 0.1.91.
	* configure.in: Updated to version 0.1.91.
	* debian/changelog: Updated to version 0.1.91.

2007-08-13  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated to version 0.1.90.
	* po/POTFILES.skip: Added accerciser.desktop.in.

2007-08-09  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Fixed assumption that the type of a variable is
	always a string.

2007-07-31  Eitan Isaacson  <eitan@ascender.com>

	* po/POTFILES.in: Removed weird automated addition.
	* po/POTFILES.skip: Removed accerciser.desktop.in.
	* src/lib/accerciser/plugin/message.py: Added an assertion test to 