@@ -1,4 +1,4 @@
-Accerciser 1.0.0
+Accerciser 1.1.0
 Just 15 minutes a day for better accessibility!
 
 Description
