@@ -1,3 +1,12 @@
+2007-09-17  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/node.py (Node.update): Assert that a
+	Component interface is actually given before trying to use it.
+	* README: Bumped to version 1.1.0 for GNOME 2.21 development
+	cycle.
+	* configure.in: Bumped to version 1.1.0 for GNOME 2.21 development
+	cycle.
+
 2007-09-16  Eitan Isaacson  <eitan@ascender.com>
 
 	* NEWS: 
